# vtutil

./: .gitignore  CMakeLists.txt  LICENSE  UniquePtr.h  ValueTreeObjectList.h  WrappedProperty.h  WrappedTree.cpp  WrappedTree.h  vtutil.cpp  vtutil.h  vtwrapper.cpp  vtwrapper.h
Tests/: Main.cpp  UniquePtrTest.cpp  WrappedPropertyTest.cpp  WrappedTreeListTest.cpp  WrappedTreeTest.cpp
src/: UniquePtr.h  ValueTreeObjectList.h  WrappedProperty.h  WrappedTree.cpp  WrappedTree.h
